# text-viewer

./: README.md  meson.build  org.example.TextViewer.json  org.example.TextViewer.json~
data/: meson.build  org.example.TextViewer.appdata.xml.in  org.example.TextViewer.desktop.in  org.example.TextViewer.gschema.xml
data/icons/: meson.build
po/: POTFILES
src/: main.c  meson.build  text_viewer-application.c  text_viewer-application.h  text_viewer-window.c  text_viewer-window.h  text_viewer-window.ui  text_viewer.gresource.xml
src/gtk/: help-overlay.ui
